# agalang-core

./: .gitignore  .gitmodules  Cargo.toml  DOC.MD  PI.number  README.MD  a.aga  build.rs  file.aga  file.agab  file.agac  file.agal  file.agalc  icon.res  index.js  iniciar.agal  mod.agal  sort.aga  sort.agab  sort.la  time.aga  time.agab
.github/workflows/: actions.yml
ComplexMath-rs/: Cargo.toml
ComplexMath-rs/src/: big_int.rs  decimal_number.rs  lib.rs  ubig_int.rs
Util-rs/src/: _tokenize.rs  list.rs
src/: colors.rs  functions_names.rs  main.rs  main.rs.rs  mod.rs  path.rs  tokens.rs  util.rs
src/0/: env.rs  eval.rs  interpreter.rs  mod.rs
src/0/values/: mod.rs  traits.rs
src/agal_parser/: mod.rs
src/agal_parser/internal/: errors.rs  mod.rs  warns.rs
src/agal_parser/lexer/: mod.rs  token_identifier.rs  token_number.rs  token_string.rs
src/agal_parser/parser/: ast.rs  mod.rs  string.rs
src/bytecode/: cache.rs  call_stack.rs  chunk.rs  compiler.rs  mod.rs  value.rs  vm.rs
src/compiler/: binary.rs  chunk.rs  mod.rs
src/frontend/: lexer.rs  mod.rs  parser.rs
src/internal/: errors.rs  warns.rs
src/interpreter/: cache.rs  mod.rs
src/libraries/: fs.rs  math.rs  mod.rs  net.rs  print.rs  time.rs
src/libs/: math.rs  mod.rs
src/modules/: fs.rs  mod.rs  print.rs
src/proto/: function.rs  mod.rs  promise.rs  string.rs
src/runtime/: env.rs  eval.rs  interpreter.rs  mod.rs  stack.rs
src/util/: _tokenize.rs  cache.rs  colors.rs  lazy.rs  list.rs  mod.rs  multi_ref_hash.rs  tokenize.rs
src/value/: mod.rs  number.rs
test/: mod.agal
(+116 files in other folders)
