[package]
name = "agalang-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "time", "macros","rt-multi-thread"] }
